tests/resource/valid/class/var_from_outside_class.mamba
def message := "may be mutable, for now"

class MyClass
    def f(self) =>
        print(message)
